Fix spacing to right of target symbol in correlated dependencies tile

--- a/frontend/packages/portal-frontend/src/compound/styles/CorrelationTile.scss
+++ b/frontend/packages/portal-frontend/src/compound/styles/CorrelationTile.scss
@@ -10,6 +10,7 @@
   align-items: center;
   img {
     height: 12px;
+    padding-right: 3px;
   }
 }
 
